package com.company;

public interface TVA {
    double procentProdus = 0.22;
    double procentIT = 0.19;
    double getPretTVA();
}
